# pdm-plugin-torch

./: .gitignore  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.buildkite/: check-line-endings.sh  install-repo.sh  pipeline.yml  run-bandit.sh  run-black.sh  run-isort.sh  run-package.sh  run-pytest.sh  validate-branch-age.sh  validate-lockfile.sh
.github/: CODEOWNERS  release-action-config.json
.github/workflows/: docs.yml  release.yml
adr/: 01-versioning.md  02-release-flow.md  README.md
docs/: coding-standard.rst  conf.py  index.rst
pdm-plugin-torch/pdm_plugin_torch/: config.py  main.py
tests/: conftest.py  test_dummy.py  test_lock.py
tests/fixtures/cpu-only/: pyproject.toml
