[project]
name = "test-cpu-only"
authors = [
    {name = "Tom Solberg", email = "me@sbg.dev"},
]
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []
description = ""
version = "0.0.01"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
plugins = [
    "../../"
]

[tool.pdm.plugin.torch]
dependencies = [
   "torch==1.11.0"
]
lockfile = "torch.lock"
enable-cpu = true

enable-rocm = false
rocm-versions = ["4.5.2"]

enable-cuda = false
cuda-versions = ["cu115", "cu117"]

[tool.pdm.scripts]
post_lock = "pdm torch lock"
